word 'subscribtion' in openapi -> 'subscription', also added codegened openapi to client/internal/external/
